<resources>
    <string name="app_name">DiplomaPaperss</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="webclient">148632640932-9tmcokc5sigdevbgu76p1jhm2k3p2eeu.apps.googleusercontent.com</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>


    <string name="diploma_npapers">Diploma\nPapers</string>
    <string name="applogo">AppLogo</string>
    <string name="gtu_npapers">GTU\nPapers</string>
    <string name="access_all_n_gtu_diploma_papers">Access All \n GTU Diploma Papers</string>
    <string name="get_all_previous_year_question_n_papers_in_one_place_fast_n_free_and_reliable">Get all previous year question\n papers in one place. Fast, \n free, and reliable</string>
    <string name="get_started">Get Started</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_continue_accessing_diploma_papers">Login to continue accessing \ndiploma papers.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="welcome_back">Welcome  Back!</string>
    <string name="email_address">Email Address</string>
    <string name="or">-------------- OR ---------------- </string>
    <string name="login_with_google">Login with Google</string>
    <string name="create_account">Create    Account</string>
    <string name="sign_up_to_continue">Sign up to Continue</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="already_created_account">Already Created Account?</string>
    <string name="please_enter_your_new_password">Please Enter your new \npassword</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="proflie">Proflie</string>
    <string name="notification">Notification</string>
    <string name="downloads">Downloads</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="gtu_departments">Gtu DepartMents</string>
    <string name="semester">Semester</string>
    <string name="semester_2">Semester 2</string>
    <string name="semester_3">Semester 3</string>
    <string name="semester_5">Semester 5</string>
    <string name="semester_6">Semester 6</string>
    <string name="semester_1">Semester 1</string>
    <string name="Favorites">Favorites\n</string>
    <string name="select_department">Select Department</string>
    <string name="mechanical">Mechanical</string>
    <string name="it">IT</string>
    <string name="chemical">Chemical</string>
    <string name="gtu_department">GTU Department</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="semester_4">Semester 4</string>
    <string name="todo">TODO</string>
    <string name="this_is_a_serch_fragment_a">This is a Serch Fragment a</string>
    <string name="your_name">Your Name</string>
    <string name="abcd1234_gmail_com">abcd1234@gmail.com</string>
    <string name="edit_proflie">Edit Proflie</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profli">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_photo">Change Photo</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="email_addres">Email Address</string>
    <string name="save_change">SAVE CHANGES</string>
    <string name="enter_a_email_address">Enter A Email Address</string>
    <string name="please_a_enter_a_email_and_check_out_your_email_address">Please a Enter a Email And Check Out Your Email Address</string>
    <string name="please_a_enter_a_email_to_change_password">Please a Enter A Email to Change Password</string>
    <string name="signup_with_google">SignUp With Google</string>
    <string name="summer_paper">Summer Paper</string>
    <string name="winter_paper">Winter Paper</string>
    <string name="subjects">Subjects</string>
    <string name="open_menu">Open Menu</string>
    <string name="sem">Semester 1</string>
    <string name="winter_2022">Winter 2022</string>
    <string name="download">Download</string>
    <string name="logou">Logout</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="settings">Settings</string>
    <string name="edit_profil">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_app">About App</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_profi">Edit Profile</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="your_ame">Your Name</string>
    <string name="logot">Logout</string>
    <string name="send_us_your_feedback">Send us your Feedback</string>
    <string name="write_your_feedback_here">Write your feedback here...</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="department">Department</string>
    <string name="favorite">Favorite</string>
    <string name="subject_name">Subject Name</string>
</resources>