<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF0FF"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:src="@drawable/onbodying"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/loginfragmentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue_accessing_diploma_papers"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/textWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/loginEditEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:background="@drawable/common_button_rounded"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginfragmentText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/loginEditPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/common_button_rounded"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/loginEditEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/loginEditForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#1E88E5"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/loginEditPassword"
        app:layout_constraintEnd_toEndOf="@id/loginEditPassword"
        android:layout_marginTop="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginGoButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/loginEditForget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_rounded"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>




    <TextView
        android:id="@+id/loginDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/loginGoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginWithGoogle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/login_with_google"
        android:background="@drawable/common_button_rounded"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/loginDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/loginWithGoogle"
        app:layout_constraintStart_toStartOf="@+id/loginWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/loginDivider"
        app:layout_constraintEnd_toEndOf="@+id/loginWithGoogle"
        android:layout_marginEnd="260dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWithGoogle" />

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/signup"
        android:textColor="#1E88E5"
        android:textSize="18sp"
        android:layout_marginLeft="250dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginWithGoogle"
        />



</androidx.constraintlayout.widget.ConstraintLayout>
