<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/profile_bg"
    android:padding="24dp"
    tools:context=".ui.bottomnavigation.EditProflie">

    <TextView
        android:id="@+id/editProfliebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_proflie"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"/>
    
    <ImageView
        android:id="@+id/ProflieeditPhoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_person"
        android:background="@drawable/circle"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    
    <TextView
        android:id="@+id/ProfliechangePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_photo"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/Proflieeditname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_full_name"
        android:padding="15dp"
        android:background="@drawable/edittext"
        android:inputType="textPersonName"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/Proflieeditemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_addres"
        android:padding="12dp"
        android:background="@drawable/edittext"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/editSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save_change"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:backgroundTint="#1976D2"
        android:textColor="@android:color/white"
        android:padding="14dp"/>

    <ProgressBar
        android:id="@+id/ProflieprogressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone" />


</LinearLayout>