<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_us_your_feedback"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etFeedback"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/write_your_feedback_here"
        android:gravity="top|start"
        android:background="@drawable/common_button_rounded"
        android:padding="12dp"
        android:textSize="16sp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSubmitFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit_feedback"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:padding="12dp"
        android:elevation="4dp" />

</LinearLayout>
