<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/profile_bg"
    android:gravity="center_horizontal"
    tools:context=".ui.bottomnavigation.ProflieFragment">


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle"
        android:elevation="3dp"
        android:padding="16dp"
        android:src="@drawable/ic_person"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/ProflieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/ProflieEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abcd1234_gmail_com"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="22dp"/>


    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginBottom="12dp"
        android:padding="19dp"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/btnLogoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:backgroundTint="@color/white"
        android:padding="19dp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="15sp"/>
</LinearLayout>