<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAF0FF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.SignupFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/signupimage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/createaccount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signuptext"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="4dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupimage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signuptext012"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="8dp"
        android:text="@string/sign_up_to_continue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/full_name"
        android:layout_marginTop="9dp"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptext012"
        android:layout_marginHorizontal="25dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/et_full_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/email_address"
        android:padding="15dp"
        android:layout_marginTop="12dp"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/password"
        android:padding="15dp"
        android:layout_marginTop="18dp"
        android:textColor="#000000"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:src="@drawable/eyesymbol"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="18dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_rounded"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tv_google_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/sign_up_with_google"
        android:background="@drawable/common_button_rounded"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/img_google"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="@+id/tv_google_text"
        app:layout_constraintStart_toStartOf="@+id/tv_google_text"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        app:layout_constraintEnd_toEndOf="@+id/tv_google_text"
        android:layout_marginEnd="260dp"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signupalreadylogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_created_account"
        android:textColor="#5A5A5A"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_google_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="16dp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signuplogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="275dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="570dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>