<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <Switch
            android:id="@+id/switchNotifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvAccountSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_settings"
        android:textSize="16sp"
        android:paddingVertical="14dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvAppInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        android:textSize="16sp"
        android:paddingVertical="14dp"
        android:textColor="@color/black" />

</LinearLayout>
