<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EAF0FF"
    tools:context=".ui.login.ForgetFragment">


<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/forgetlogo"
    android:layout_width="0dp"
    android:layout_height="@dimen/default_image_size123"
    android:src="@drawable/forgetlogo"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="70dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:id="@+id/forgettext"
        android:layout_height="55dp"
        android:text="@string/please_enter_your_new_password"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/forgetlogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_18"
        android:textColor="@color/black"/>
    
    
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/forgeteditText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/new_password"
        android:background="@drawable/common_button_rounded"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/forgettext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:inputType="textPassword"
        android:layout_marginTop="24dp" />



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/forgeteditText2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:background="@drawable/common_button_rounded"
        app:layout_constraintTop_toBottomOf="@id/forgeteditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:src="@drawable/eyesymbol"
        app:layout_constraintEnd_toEndOf="@id/forgeteditText"
        app:layout_constraintTop_toBottomOf="@id/forgeteditText"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="25dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:src="@drawable/eyesymbol"
        app:layout_constraintEnd_toEndOf="@id/forgettext"
        app:layout_constraintTop_toBottomOf="@id/forgettext"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetpassword"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/forgeteditText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_rounded"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/reset_password"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>