<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/act_onbodying"
    tools:context=".ui.base.OnBodyingActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageonbodying"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/onbodying"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textviewonbodying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/access_all_n_gtu_diploma_papers"
        android:maxLines="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="105dp"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textAlignment="center"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_all_previous_year_question_n_papers_in_one_place_fast_n_free_and_reliable"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="390dp"
        android:textStyle="normal"
        android:textSize="22sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/button_rounded"
        android:text="@string/get_started"
        android:textColor="#FFFFFF"
        android:padding="14dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>